# TrussVizPy

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml  zenodo.json
backend/: app.py  reponse.py  requirements.txt  test.py
backend/TrussPy/: .gitignore  __init__.py  data.py  data_types.py  main.py  truss.py  types.py
backend/TrussPy/draw/: __init__.py  draw.py  pdf.py
react-frontend/: package-lock.json  package.json  tsconfig.json
react-frontend/public/: index.html
react-frontend/src/: App.css  App.js  App.tsx  Chat.js
react-frontend/src/page/Truss/: Main.js  Truss.js  Truss.tsx  context.js
react-frontend/src/page/Truss/CSS/: App.scss
react-frontend/src/page/Truss/draw/: Draw.js  Draw.tsx  Head.js  Head.tsx  Left.js  Left.tsx  ReadInp.js  Right.js  Right.tsx  SetLineMakings.js  context.js  context.tsx
react-frontend/src/page/Truss/show/: Head.js  Show.js  Show.tsx
