[project]
name = "trussvizpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "matplotlib>=3.10.1",
    "msgpack>=1.1.0",
    "numpy>=2.2.4",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scipy>=1.15.2",
]
